--- a/index.html
+++ b/index.html
@@ -103,6 +103,26 @@
             text-align: right;
             font-weight: bold;
         }
+
+        .alert {
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 15px 20px;
+  border-radius: 4px;
+  color: white;
+  z-index: 1000;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+}
+
+.alert.success {
+  background-color: #4CAF50;
+}
+
+.alert.error {
+  background-color: #f44336;
+}
         
         @media (max-width: 768px) {
             .container {
