--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <h3 class="text-center mb-4 mt-4">Daftar Stok Barang Toko Perlengkapan Bayi</h3>
+                    <h3 class="text-center mb-4 mt-4">Daftar Stok Barang With Excel</h3>
                     
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary" id="tambahProduk">
